[gd_scene load_steps=2 format=3 uid="uid://bf547j6rvpn2w"]

[ext_resource type="Script" path="res://_/scripts/example.gd" id="1_inppe"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_inppe")

[node name="GetButton" type="Button" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 175.0
offset_bottom = 65.0
text = "Get"

[node name="SetButton" type="Button" parent="."]
offset_left = 200.0
offset_top = 30.0
offset_right = 345.0
offset_bottom = 65.0
text = "Set"

[node name="DeleteButton" type="Button" parent="."]
offset_left = 370.939
offset_top = 30.0
offset_right = 515.94
offset_bottom = 65.0
text = "Delete"

[connection signal="pressed" from="GetButton" to="." method="_on_get_button_pressed"]
[connection signal="pressed" from="SetButton" to="." method="_on_set_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
